Adding back examples capillary barrier adapt and seepage adapt.

--- a/2d-advanced/richards/CMakeLists.txt
+++ b/2d-advanced/richards/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(basic-ie-newton)
 add_subdirectory(basic-rk-newton)
 add_subdirectory(basic-rk-newton-adapt)
 add_subdirectory(capillary-barrier-rk)
+add_subdirectory(capillary-barrier-adapt)
+add_subdirectory(seepage-adapt)
