Adding back examples driven-cavity and circular-obstacle-adapt.

--- a/2d-advanced/navier-stokes/CMakeLists.txt
+++ b/2d-advanced/navier-stokes/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_subdirectory(bearing)
 add_subdirectory(circular-obstacle)
 add_subdirectory(ns-heat-subdomains)
+add_subdirectory(driven-cavity)
+add_subdirectory(circular-obstacle-adapt)
+
+
