--- a/2d-advanced/maxwell/CMakeLists.txt
+++ b/2d-advanced/maxwell/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(resonator-time-domain-I)
 add_subdirectory(resonator-time-domain-II-ie)
 add_subdirectory(resonator-time-domain-II-rk)
 add_subdirectory(magnetostatics)
+add_subdirectory(maxwell-debye-rk)
+
