Adding back example rayleigh-benard.

--- a/2d-advanced/navier-stokes/CMakeLists.txt
+++ b/2d-advanced/navier-stokes/CMakeLists.txt
@@ -3,5 +3,7 @@ add_subdirectory(circular-obstacle)
 add_subdirectory(ns-heat-subdomains)
 add_subdirectory(driven-cavity)
 add_subdirectory(circular-obstacle-adapt)
+add_subdirectory(rayleigh-benard)
+
 
 
