--- a/2d-benchmarks-nist/CMakeLists.txt
+++ b/2d-benchmarks-nist/CMakeLists.txt
@@ -7,7 +7,9 @@ add_subdirectory(06-boundary-layer)
 add_subdirectory(07-boundary-line-singularity)   
 add_subdirectory(08-oscillatory)   
 add_subdirectory(09-wave-front)   
+add_subdirectory(09-wave-front-kelly-dealii)   
 add_subdirectory(09-wave-front-kelly)
 add_subdirectory(10-interior-line-singularity)
 add_subdirectory(11-kellogg)
 add_subdirectory(12-multiple-difficulties)
+
